[gd_scene load_steps=8 format=3 uid="uid://btkdfeb104mc5"]

[ext_resource type="Script" path="res://Scripts/Char_Scripts/BonekaKayu.gd" id="1_66wod"]
[ext_resource type="SpriteFrames" uid="uid://coeksn2epug4g" path="res://AnimationSprite/Level 1/Boneka kayu/BodekaKayu.tres" id="2_ioapi"]
[ext_resource type="AudioStream" uid="uid://bbj7v7wmna2qc" path="res://Audio/Sfx/Enemy/Minion/SiBonekaKayu/Movement/Walkin.wav" id="3_pyj2q"]
[ext_resource type="AudioStream" uid="uid://bg3nl1xoad6dk" path="res://Audio/Sfx/Enemy/Minion/SiBonekaKayu/Attack/Minion_PinokiyoKW_Attack_AllDirection.wav" id="4_wy53n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tspg3"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_o0dja"]
radius = 44.0454

[sub_resource type="CircleShape2D" id="CircleShape2D_bemk0"]
radius = 14.0357

[node name="BonekaKayu" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 113
script = ExtResource("1_66wod")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_tspg3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.90735e-06, -2)
scale = Vector2(0.734375, 0.734375)
sprite_frames = ExtResource("2_ioapi")
animation = &"attack"
frame_progress = 0.064105

[node name="attackanim" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, -2)
scale = Vector2(0.734375, 0.734375)
sprite_frames = ExtResource("2_ioapi")
animation = &"attack"
frame = 2
frame_progress = 1.0

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_o0dja")

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
shape = SubResource("CircleShape2D_bemk0")

[node name="SFX" type="Node" parent="."]

[node name="WalkSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_pyj2q")

[node name="AttackSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_wy53n")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
